# AI_news

./: app.py  database.db  hello.py  pyproject.toml
crawler/: crawler.py
templates/: base.html  edit.html
