[tool.poetry]
name = "flask-ai-news"
version = "0.1.0"
description = ""
authors = ["st4rl1ghtpurpl3 <bouasriaayoub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
